fix: dotenv fle icon too narrow

--- a/static/css/parts/FileIcon.css
+++ b/static/css/parts/FileIcon.css
@@ -2,6 +2,5 @@
   contain: strict;
   pointer-events: none;
   width: 16px;
-  height: 22px;
-  align-items: center;
+  height: 16px;
 }
